@@ -4,6 +4,9 @@ This file tracks the changes to Wing over time. Especially
 with respect to new features and compatibility changes.
 ==========================================================
 
+2020-11-11
+ * Handle warnings even when properties are directly injected into a wing object in wing.vue.js.
+
 2020-11-09
  * Removed "Last Login" from profile template since that is hidden info.
  * Made long URLs in comments wrap so they don't make weird scroll bars.
